<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fafafa"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".Login">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="261dp"
            android:layout_height="194dp"
            android:layout_margin="10dp"
            card_view:srcCompat="@drawable/fight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/basic"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textColor="#3a3a3a"
            android:textSize="22sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center_horizontal"
            android:text="@string/login_back"
            android:textColor="#3a3a3a"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_email"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/etxt_bg"
            android:drawableLeft="@drawable/usericon"
            android:drawablePadding="15dp"
            android:gravity="left|center_vertical"
            android:hint="@string/login_form_username"
            android:inputType="text"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_password"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/etxt_bg"
            android:drawableLeft="@drawable/padlock"
            android:drawablePadding="15dp"
            android:gravity="left|center_vertical"
            android:hint="@string/login_form_password"
            android:inputType="textPassword"
            android:textColor="@color/blue"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/btn_bg"
            android:text="@string/login_form_login"
            android:textColor="#fff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/createtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Does not have account yet? Sign Up"
            android:textSize="15sp" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:visibility="gone" />

    </LinearLayout>
</LinearLayout>